styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: #e0dede;
  font-family: "Poppins", sans-serif;
  line-height: 1.5;
}
header li {
  list-style: none;
}
header a {
  text-decoration: none;
  color: #000;
  font-size: 1rem;
}
header a:hover {
  color: #1f1e1e;
}
header {
  position: relative;
  padding: 0 2rem;
}
.navbar {
  width: 100%;
  height: 60%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.navbar .logo a {
  font-size: 1.5rem;
  font-weight: bold;
}
.navbar .links {
  display: flex;
  gap: 2rem;
}
.links a {
  cursor: pointer;
  font-size: clamp(0.5rem, 4vw, 2rem);
}
.navbar .toggle_btn {
  color: #000;
  font-size: 2rem;
  cursor: pointer;
  display: none;
}

.action_btn {
  background-color: orange;
  color: #fff;
  padding: 0.5rem 1rem;
  border: none;
  outline: none;
  border-radius: 20px;
  font-size: 0.8rem;
  font-weight: bold;
  cursor: pointer;
}
.action-btn:hover {
  -webkit-animation: rotate-90-vertical 5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
    both;
  animation: rotate-90-vertical 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}
.dropdown_menu {
  display: none;
  position: absolute;
  right: 2rem;
  height: 0;
  top: 60px;
  width: 300px;
  background: rgb(15, 15, 15);
  backdrop-filter: blur(15px);
  border-radius: 10px;
  overflow: hidden;
  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}
.dropdown_menu.open {
  height: 300px;
}

.dropdown_menu li {
  padding: 0.7rem;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
.dropdown_menu .action_btn {
  width: 100%;
  display: flex;
  justify-content: center;
}

.logo {
  -webkit-animation: rotate-90-vertical 5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
    both;
  animation: rotate-90-vertical 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}
@-webkit-keyframes rotate-90-vertical {
  0% {
    -webkit-transform: rotateY(0);
    transform: rotateY(0);
  }
  100% {
    -webkit-transform: rotateY(-360deg);
    transform: rotateY(-360deg);
  }
}
@keyframes rotate-90-vertical {
  0% {
    -webkit-transform: rotateY(0);
    transform: rotateY(0);
  }
  100% {
    -webkit-transform: rotateY(-360deg);
    transform: rotateY(-360deg);
  }
}

@media (max-width: 992px) {
  .navbar .links,
  .navbar .action_btn {
    display: none;
  }
  .navbar .toggle_btn {
    display: block;
    color: #000;
    z-index: 3;
  }
  .dropdown_menu {
    background-color: #e0dede;
    top: 0;
    width: 100%;
    display: block;
    z-index: 1;
    padding-top: 2rem;
  }
  .dropdown_menu a {
    color: #000;
    font-size: 24px;
    font-weight: 600;
  }
  .logo {
    z-index: 6;
  }
}

@media (max-width: 576px) {
  .dropdown_menu {
    left: 2rem;
    width: unset;
  }
}

/* body css */
/* about intro */
.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: 50px 0;
  animation: animate__backInDown;
  animation-duration: 2s;
}
.about h1 {
  font-size: clamp(2rem, 6vw, 4rem);
  font-weight: 600;
  text-align: center;
  margin: 0;
  padding: 0;
}
.about p {
  font-size: clamp(1rem, 2vw, 1.5rem);
  font-weight: 400;
  text-align: left;
  word-spacing: -1px;
  line-break: break-all;
  word-break: normal;
  margin-left: 50px;
  padding: 0;
  width: 90%;
}
/* about intro */
/* what we do */
.services h1 {
  font-size: clamp(2rem, 6vw, 4rem);
  font-weight: 600;
  text-align: center;
  margin: 0;
  padding: 0;
}
.service img {
  width: 80px;
  height: 80px;
}
.service {
  display: grid;
  place-items: center;
  padding: 2px 10px;
  text-align: justify;
  height: 250px;
  cursor: pointer;
  box-shadow: -5px -4px 3px 0px rgba(255, 255, 255, 0.425),
    5px 4px 3px 0px rgba(88, 88, 88, 0.425);
}
.services p {
  word-spacing: 1px;
  text-align: justify;
  line-break: auto;
}
.service:hover {
  box-shadow: -5px -4px 3px 0px rgba(255, 255, 255, 0.425),
    5px 4px 3px 0px rgba(88, 88, 88, 0.425), 0px 0px 10px 0px rgba(0, 0, 0, 0.8);
  transition: all 0.5s ease-in-out;
}
.servicesList {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 50px;
  padding: 50px 20px;
  place-items: center;
}
/* what we do */
/* process */
.process {
  background-color: #000;
}
.process-details h3 {
  font-size: clamp(2rem, 6vw, 4rem);
  text-align: center;
}
.process-details p {
  font-size: clamp(1rem, 2vw, 1.5rem);
  text-align: justify;
  line-break: auto;
  word-spacing: 1px;
}
.processes {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.process h1 {
  font-size: clamp(2rem, 6vw, 4rem);
  font-weight: 600;
  text-align: center;
  color: #e0dede;
  margin: 0;
  padding: 0;
}
.process-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.process-step {
  position: relative;
  width: 180px;
  height: 180px;
}

.process-icon {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.process-icon img {
  max-width: 70%;
  max-height: 80%;
}
.process-icon:hover {
  background-color: rgba(0, 0, 0, 0.8);
}
.process-icon:hover .icon-image {
  content: url("imgs/clickMe.png");
}

.process-details {
  margin-top: 50px;
  width: 700px;
  background-color: rgba(0, 0, 0, 0.8);
  color: white;
  padding: 20px;
  transition: opacity 0.3s ease-in-out;
  display: none;
  box-shadow: -2px -2px 3px 2px rgba(255, 255, 255, 0.425),
    2px 2px 3px 0px rgba(88, 88, 88, 0.425);
}

.process-details.active {
  display: block;
}

/* process */
/* pricing */
.pricing {
  text-align: center;
  padding: 40px 0;
  background-color: #000;
}

.pricing h1 {
  font-weight: 600;
  text-align: center;
  color: #e0dede;
  margin-bottom: 50px;
  padding: 0;
}
/* ... */

